# tiktok-analyzer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  build.sh  dev.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api_main.py  cli.py  config.py  pyproject.toml  pytest.ini  requirements.txt
backend/adapters/: __init__.py  auth_persistence.py  database_persistence.py  facebook_token_verifier.py  github_token_verifier.py  google_token_verifier.py  http_engine.py  password_hasher.py  paypal_payment.py  rbac_adapter.py  stripe_payment.py  tiktok_euler_call_sink.py  tiktok_event_bus.py  tiktok_listener_status.py  tiktok_live_client.py  tiktok_offset_tracker.py  tiktok_profile_scraper.py  tiktok_state_cache_inproc.py  tiktok_state_cache_redis.py  tiktok_state_ticker.py
backend/adapters/hooks/: __init__.py  email_handler.py  event_persistence_handler.py  log_handler.py
backend/adapters/notification_delivery/: email.py
backend/adapters/notification_queue/: redis_queue.py
backend/adapters/persistence/: __init__.py  _base.py  app_config_persistence.py  billing_persistence.py  config_persistence.py  config_snapshot_persistence.py  database_management_persistence.py  event_config_persistence.py  event_persistence.py  oauth_persistence.py  recipient_persistence.py  ticket_persistence.py  tiktok_persistence.py
backend/bench/: check_tracks.py  config.json  create_random_alerts.py  register_and_verify.py  verify_list_params.py
backend/cli/: README.md  __init__.py  auth_decorators.py  logging_config.py  main.py  options.py  services.py  session.py
backend/cli/commands/: __init__.py  auth.py  rate_limit.py  support.py
backend/database/: README.md  __init__.py
backend/database/auth/: __init__.py  models.py  oauth_models.py  rbac_models.py  rbac_service.py  utils.py
backend/database/billing/: models.py
backend/database/config/: __init__.py  app_config_models.py  config_snapshot_models.py
backend/database/core/: base.py  connection.py
backend/database/docs/: API_INTEGRATION_COMPLETE.md  DATABASE_CONFIG.md  IMPLEMENTATION_PLAN.md  MIGRATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  REORGANIZATION_PROPOSAL.md  TESTING_COMPLETE.md
backend/database/hooks/: __init__.py  event_config_models.py  hook_event_models.py  models.py  services.py
backend/database/migrations/: add_app_config.py  add_awaiting_payment_status.py  add_billing_tables.py  add_config_snapshots.py  add_credit_ledger_note.py  add_event_configs.py  add_event_hour_counts.py  add_event_hour_counts_diamonds.py  add_event_message_id.py  add_event_type_hour_counts_diamonds.py  add_events_type_ts_and_worker_log_event_ts_indexes.py  add_favorite_gifters.py  add_favorite_gifters_notify.py  add_hook_events.py  add_hook_events_trace_id.py  add_ledger_source_monitor_tiktok.py  add_livechat_attachments.py  add_livechat_enterprise_features.py  add_notifications.py  add_oauth_accounts.py  add_subscription_is_public.py  add_subscription_live_cache.py  add_ticket_reopen_count.py  add_tickets.py  add_tiktok_euler_call_log.py  add_tiktok_host_calendar_cache.py  add_tiktok_lives_summary_indexes.py  add_tiktok_room_stats.py  add_tiktok_room_stats_cache.py  add_tiktok_subscription_ownership.py  add_tiktok_tables.py  add_tiktok_worker_registry.py  add_user_credits.py  add_user_host_summary.py  add_viewer_enigma_aliases.py  add_viewer_is_enigma.py  add_viewers_trgm_indexes.py  add_worker_control_log.py  add_worker_telemetry_tables.py  (+15 more)
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md  BILLING_MODEL.md  DB_ARCHITECTURE.md  DOMAIN_MODEL.md  EVENTS_LOGGER.md  PROJECT_EXPORT.md  SECURITY_MODEL.md  WORKER.md
backend/domain/: __init__.py  exceptions.py
backend/examples/: auth_dependency_usage.py
backend/ports/: __init__.py  app_config.py  auth.py  billing_persistence.py  config_port.py  config_snapshot_port.py  data_persistence.py  event_config.py  notification_delivery.py  oauth.py  payment_gateway.py  rbac.py  ticket_persistence.py  tiktok_live.py  tiktok_persistence.py  tiktok_state_cache.py
backend/routes/: auth.py  billing.py  contact.py  general.py  livechat.py  main.py  media.py  public_tiktok.py  webhooks.py
backend/scripts/: build_push_and_update_manifest.sh  check_and_reduce_docker_size.sh  check_error_logs.sh  check_rbac.py  export_openapi.py  flush_rbac.py  lint.sh  setup-dev.sh
backend/tests/: README_SECURITY_TESTS.md  __init__.py  cleanup_tracks_script.py  conftest.py  create_test_user_script.py  test_apply_state_delta.py  test_auth_rate_limits.py  test_auth_security.py  test_contact.py  test_history.py  test_livechat.py  test_lives_ws_delta.py  test_login_as_user.py  test_remote_queue_api.py  test_state_cache_parity.py  test_state_tick.py  test_tickets.py  test_tiktok_state_cache.py  test_user_account.py  test_user_credits.py  verify_enterprise_context.py
backend/utils/: __init__.py  auth_dependency.py  auth_provider.py  debug.py  display.py  logging_config.py  logging_context.py  oauth_provider.py  path.py  perf_tracer.py  price.py  redis_client.py  request.py
(+447 files in other folders)
